# Beaulieu-Automation

./: Cargo.toml  README.md  exemple.ba  icon.xcf
crates/InputBot/: Cargo.toml
crates/InputBot/src/: common.rs  lib.rs  public.rs
crates/InputBot/src/windows/: inputs.rs  mod.rs
crates/ba/: Cargo.toml
crates/ba/src/: dirs.rs  keymap.rs  main.rs  mousemap.rs
crates/ba/src/cli/: mod.rs  new.rs  run.rs
crates/ba/src/compiler/: button.rs  expression.rs  mod.rs  token.rs
crates/ba/src/compiler/engine/: mod.rs  watcher.rs
crates/ba/src/compiler/lexer/: mod.rs  rules.rs
crates/ba/src/compiler/parser/: ast.rs  button.rs  mod.rs
crates/input-bot/: Cargo.toml  README.md
crates/input-bot/src/: lib.rs  public.rs
crates/input-bot/src/windows/: inputs.rs  mod.rs
src/: main.rs
src/compiler/: token.rs
