[workspace]
members = [
    "crates/ba",
    "crates/InputBot"
]
resolver = "2"

[workspace.package]
authors = ["Elliot Currat"]
edition = "2021"
version = "0.2.2"

[workspace.dependencies]
anyhow = { version = "1.0" }
inputbot = { version = "0.6.0", path = "crates/InputBot" }
once_cell = { version = "1.19" }
oneshot = { version = "0.1" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1" }
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
] }

[profile.release]
opt-level = 3
debug = true
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1