[workspace]
members = [
    "crates/ba",
    "crates/input-bot"
]
resolver = "2"

[workspace.package]
authors = ["Elliot Currat <elliot.currat@epfl.ch>"]
edition = "2024"
version = "0.2.3"
license = "MIT"

[workspace.dependencies]
inputbot = {version = "0.2.3", path = "crates/input-bot"}

anyhow = { version = "1.0" }
clap = { version = "4.5" }
directories = { version = "6.0" }
jiff = { version = "0.2" }
once_cell = { version = "1.21" }
oneshot = { version = "0.1" }
regex = { version = "1.10" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-appender = { version = "0.2" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
] }

[profile.release]
opt-level = 3
debug = true
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1