[package]
name = "inputbot"
version = "0.6.0"
authors = ["obv-mikhail <obv.mikhail@gmail.com>", "anesthetice"]
license = "MIT"
edition = "2021"

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
once_cell = { workspace = true }
thiserror = { version = "^1.0" }
regex = { workspace = true }
serde = { workspace = true }
windows = { workspace = true }

[dev-dependencies]
toml = { version = "^0.8" }