[package]
name = "inputbot"
version = "0.6.0"
authors = ["obv-mikhail <obv.mikhail@gmail.com>", "anesthetice"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }

[dev-dependencies]
toml = { version = "^0.8" }