[package]
name = "beaulieu_automation"
version.workspace = true 
edition.workspace = true

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["cargo"] }
directories = { version = "5.0" }
inputbot = { workspace = true }
once_cell = { workspace = true }
oneshot = { version = "0.1" }
regex = { workspace = true }
serde = { workspace = true}
serde_json = { version = "1.0" }
time = { version = "0.3.36", features = ["local-offset"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
windows = { workspace = true }
