[package]
name = "BeaulieuAutomation"
version.workspace = true 
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["cargo"] }
directories = { version = "5.0" }
inputbot = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true}
serde_json = { version = "1.0" }
time = { version = "0.3.36", features = ["local-offset"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
windows = { workspace = true }
