[package]
name = "BeaulieuAutomation"
version.workspace = true 
edition.workspace = true

[dependencies]
inputbot = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
directories = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
windows = { workspace = true }
