[package]
authors = ["obv-mikhail <obv.mikhail@gmail.com>", "Elliot Currat <elliot.currat@epfl.ch>"]
name = "inputbot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }